--- a/Xreveal_FRA.ini
+++ b/Xreveal_FRA.ini
@@ -1,7 +1,7 @@
 [INFO]
 ID=0x040C
 Name=French (Français)
-Version=2.6.7
+Version=2.6.9
 Author=Andex
 1=OK
 2=Annuler
@@ -43,7 +43,7 @@ Author=Andex
 7=&Rechercher les mises à jour automatiquement
 8= <a>Rechercher maintenant!</a>
 9=&Signaler automatiquement les codes d'erreur de lecture pour améliorer Xreveal
-10=&Prevent the system from sleeping while ripping
+10=Désactiver la mise en &veille lors de la copie
 
 [DIALOG_9]
 0=CD
@@ -51,18 +51,18 @@ Author=Andex
 
 [DIALOG_10]
 0=DVD
-3=&Enable DVD support
+3=&Activer la prise en charge des DVD
 4=Supprimer &RC (Region Code)
 5=Supprimer RC&E (Region Code Enhancement)
 6=Région du &disque:
-7=Supprimer &APS (Analog Protection System)
+7=Supprimer A&PS (Analog Protection System)
 8=Supprimer &UOPs (User Operation Prohibitions)
 9=Supprimer ARcc&OS (Advanced Regional copy control Operating Solution)
-11=Xreveal needs <a>libdvdcss-2.dll</a> to open DVDs.
+11=Note: vous devez utiliser le fichier <a>libdvdcss-2.dll</a> pour que Xreveal puisse ouvrir un DVD.
 
 [DIALOG_11]
 0=Blu-ray
-3=&Enable Blu-ray support
+3=&Activer la prise en charge des Blu-ray
 4=Supprimer &BD+
 5=Supprimer &RC (Region Code)
 6=Région du &disque:
@@ -77,7 +77,7 @@ Author=Andex
 
 [DIALOG_12]
 0=KeyDB
-3=Note: Xreveal ne contient aucune clé de déchiffrement!\nVous devez utiliser un <a>fichier</a> pour que Xreveal puisse fonctionner.
+3=Note: Xreveal ne contient aucune clé de déchiffrement!\nVous devez utiliser un fichier <a>KeyDB.cfg</a> pour que Xreveal puisse fonctionner.
 4=Emplacement du fichier 'KeyDB.cfg'
 5=Emplacement des correctifs BD+/FUT (Fix Up Table)
 6=&Rechercher la clé en ligne
@@ -89,29 +89,29 @@ Author=Andex
 8=&Activer LibreDrive pour les disques UHD
 
 [DIALOG_14]
-1=Start
+1=Démarrer
 3=Source
 4=Destination
 5=Options
 6=Info
 7=Type:
-8=Capacity:
+8=Capacité:
 9=Protection:
-10=Free space:
-11=Capacity:
-12=&Keep protection
-13=&Verify content hash
-14=Create &md5 checksum file
-15=Create &dvdid.xml
+10=Espace libre:
+11=Capacité:
+12=&Conserver la protection
+13=&Vérifier l'intégrité des données
+14=Créer un fichier de contrôle &MD5
+15=Créer le fichier &dvdid.xml
 
 [DIALOG_15]
 0=Xreveal
 3=Source:
 4=Destination:
-6=Time elapsed:
-7=Time remaining:
-8=Read errors:
-9=Read rate:
+6=Temps écoulé:
+7=Temps restant:
+8=Erreurs de lecture:
+9=Vitesse de lecture:
 
 [DIALOG_16]
 0=Régions
@@ -129,16 +129,16 @@ Author=Andex
 
 [DIALOG_19]
 0=Raccourcis
-3=You can create system-wide hotkeys to trigger some actions while Xreveal is running.
-4=Show Xreveal system tray menu:
-5=Show settings window:
-6=Enable/Disable Xreveal:
-7=Rip to ISO file:
-8=Rip to folder:
+Les raccourcis créés ici fonctionnent dans Windows quand Xreveal s'exécute en arrière-plan.
+4=Menu de Xreveal:
+5=Paramètres:
+6=Activer/Désactiver:
+7=Copier en ISO:
+8=Copier dans un dossier:
 
 [DIALOG_20]
 0=HD DVD
-3=&Enable HD DVD support
+3=&Activer la prise en charge des HD DVD
 4=Supprimer le 1er &titre lisible
 5=Supprimer &UOPs (User Operation Prohibitions)
 6=Supprimer les &restrictions parentales
@@ -154,37 +154,37 @@ Author=Andex
 4=Pas de clé de déchiffrement trouvée dans 'KeyDB.cfg'!\nVoulez-vous évaluer la fonctionnalité de recherche de clé en ligne?
 
 [DIALOG_23]
-0=Disc Information
+0=Informations sur le disque
 
 [DIALOG_24]
-0=Drive Information
-3=Drive:
-4=Serial number:
-5=Vendor specific:
-6=Bus encryption capable:
+0=Informations sur le lecteur
+3=Lecteur:
+4=N° de série:
+5=Fabricant:
+6=Bus Encryption:
 
 [DIALOG_25]
-0=Import...
-3=Source keydb.db:
-4=Select or drop source keydb.db here
-5=Destination keydb.db:
+0=Importer...
+3=Source 'keydb.db':
+4=Sélectionnez ou déposer le fichier 'keydb.db' ici
+5=Destination 'keydb.db':
 
 [DIALOG_26]
-0=Content Hash Verifier
+0=Vérification
 
 [DIALOG_27]
-0=Sounds
-3=Play sound after opening disc
-4=Play sound after ripping disc
-5=Success sound:
-6=Error sound:
+0=Sons
+3=Son après l'ouverture d'un disque
+4=Son après la copie d'un disque
+5=Succès:
+6=Erreur:
 
 [DIALOG_28]
-0=Create Dump File
-3=Please wait...
-4=Adding %s...
-5=<a>How to submit dump files?</a>
-6=The file has been successfully created.
+0=Créer un fichier d'informations
+3=Patienter SVP...
+4=Ajout de %s...
+5=<a>Comment transmettre un fichier d'informations?</a>
+6=Le fichier a été correctement créé!
 
 [DIALOG_A]
 0=Mise à jour
@@ -238,7 +238,7 @@ Author=Andex
 24=%.1f Mo/s
 25=Operation successfully completed!
 26=Pas de clé de déchiffrement trouvée dans {%s}!
-27=Pas de BD+ FUT trouvé!
+27=Pas de BD+/FUT trouvé!
 28=Xreveal n'a pas réussi à ouvrir le disque!\nCode d'erreur: %s
 29=Lecteur
 30=Fabricant
@@ -252,9 +252,9 @@ Author=Andex
 38=%C:
 39=%C:\[%S]
 40=&Statut
-41=&Open in Explorer
-42=&Create Dump File
-43=&Montrer le tableau des correctifs BD+
+41=&Ouvrir dans l'explorateur Windows
+42=&Créer un fichier d'informations
+43=&Créer un fichier d'informations des correctifs BD+/FUT
 44=Copier dans un &dossier...
 45=Copier en &fichier ISO...
 46=&Activer/Désactiver
@@ -264,7 +264,7 @@ Author=Andex
 50=&Outils
 51=À propos de &Xreveal
 52=&Quitter
-53=Éje&cter
+53=&Éjecter
 54=&Charger
 55=&Propriétés
 56=Aucun
@@ -312,39 +312,39 @@ Author=Andex
 98=&Importer...
 99=&Ouvrir l'emplacement du fichier
 100=Commentaire
-101=Verifier ISO
-102=Verifier le dossier
-103=Verifier le lecteur
+101=Vérifier ISO
+102=Vérifier le dossier
+103=Vérifier le lecteur
 104='Bus Encryption' possible
 105=%s (Lecteur: %s)
-106=Oouvrir le dossier des 'Logs'
+106=Ouvrir le dossier '&log'
 107=Options
 108=Sortie détaillée
 109=Version en ligne de commande (Windows/macOS/Linux)
 110=Abandonner
 111=Fabricant
-112=Directory %s doesn't exist. Do you want to create it?
-113=When done: 
-114=Do nothing
+112=Le dossier '%s' n'existe pas!/nVoulez-vous le créer?
+113=Quand fini: 
+114=Ne rien faire
 115=, 
-116=Eject disc
-117=Play sound
-118=Quit Xreveal
-119=No action
-120=Shutdown
-121=Sleep
-122=Hibernate
-123=Lock system
-124=Log off
-125=All Files
-126=ISO Files
-127=WAV Files
-128=KeyDB Files
-129=Database Files
-130=Select or drop the WAV file here
-131=Select or drop the KeyDB.cfg here
-132=%u%% complete
-133=Error reading from drive %C:!\nSectors: %u-%u
-134=Error reading %s!\nSectors: %u-%u
-135=Abort request acknowledged
-136=Copying...
+116=Ejecter le disque
+117=Lire un son
+118=Quit Xreveal (No more used)
+119=Aucune action
+120=Eteindre l'ordinateur
+121=Mettre en veille
+122=Mettre en veille prolongée
+123=Verrouiller le système
+124=Se déconnecter
+125=Tous les fichiers
+126=Fichiers ISO
+127=Fichiers WAV
+128=Fichiers KeyDB
+129=Fichiers Base de Données
+130=Sélectionner ou déposer un fichier WAV ici
+131=Sélectionner ou déposer le fichier 'KeyDB.cfg' ici
+132=%u%% terminé!
+133=Erreur de lecture sur le lecteur %C:!\nSecteurs: %u-%u
+134=Erreur de lecture %s!\nSecteurs: %u-%u
+135=Demande d'abandon autorisée!
+136=Copie en cours...
