--- a/Xreveal_FRA.ini
+++ b/Xreveal_FRA.ini
@@ -271,7 +271,7 @@ Les raccourcis créés ici fonctionnent dans Windows quand Xreveal s'exécute en
 57=Vous utilisez la version gratuite de Xreveal!\n\nPassez en <a>version Pro</a> pour débloquer des fonctionnalités supplémentaires ;-)
 58='%s' existe déjà!\nVoulez-vous le remplacer?
 59=Êtes-vous sûr de vouloir annuler?
-60=Your license expired on %s.
+60=Votre licence a expiré le %s!
 61=Lecteur
 62=Code région
 63=Modifications restantes
@@ -327,7 +327,7 @@ Les raccourcis créés ici fonctionnent dans Windows quand Xreveal s'exécute en
 113=Quand fini: 
 114=Ne rien faire
 115=, 
-116=Ejecter le disque
+116=Éjecter le disque
 117=Lire un son
 118=Quit Xreveal (No more used)
 119=Aucune action
