--- a/Xreveal_FRA.ini
+++ b/Xreveal_FRA.ini
@@ -95,7 +95,7 @@ Author=Andex
 5=Options
 6=Info
 7=Type:
-8=Capacité:
+8=Taille:
 9=Protection:
 10=Espace libre:
 11=Capacité:
@@ -323,7 +323,7 @@ Les raccourcis créés ici fonctionnent dans Windows quand Xreveal s'exécute en
 109=Version en ligne de commande (Windows/macOS/Linux)
 110=Abandonner
 111=Fabricant
-112=Le dossier '%s' n'existe pas!/nVoulez-vous le créer?
+112=Le dossier '%s' n'existe pas!\nVoulez-vous le créer?
 113=Quand fini: 
 114=Ne rien faire
 115=, 
