--- a/Xreveal_FRA.ini
+++ b/Xreveal_FRA.ini
@@ -129,7 +129,7 @@ Author=Andex
 
 [DIALOG_19]
 0=Raccourcis
-Les raccourcis créés ici fonctionnent dans Windows quand Xreveal s'exécute en arrière-plan.
+3=Les raccourcis créés ici fonctionnent dans Windows quand Xreveal s'exécute en arrière-plan.
 4=Menu de Xreveal:
 5=Paramètres:
 6=Activer/Désactiver:
