--- a/Xreveal_DEU.ini
+++ b/Xreveal_DEU.ini
@@ -1,7 +1,7 @@
 ﻿[INFO]
 ID=0x0407
 Name=German (Deutsch)
-Version=2.6.8
+Version=2.6.8.4
 Author=The Punisher
 1=OK
 2=Abbrechen
@@ -43,7 +43,7 @@ Author=The Punisher
 7=Automatisch Online auf Updates überprüfen
 8=<a>Jetzt prüfen</a>
 9=Automatisch fehlgeschlagenes Öffnen einer Disc &melden um Xreveal zu verbessern
-10=&Prevent the system from sleeping while ripping
+10=&Verhindern das das System während des Rippens in den Ruhezustand geht
 
 [DIALOG_9]
 0=CD
@@ -51,18 +51,18 @@ Author=The Punisher
 
 [DIALOG_10]
 0=DVD
-3=&Enable DVD support
+3=&DVD Unterstützung aktivieren
 4=Software-Regionalcode entfernen
 5=Regionalcode-Erweiterungsschutz entfernen
 6=Disc-Region:
 7=Macrovision entfernen
 8=Benutzereinschränkungen entfernen
 9=ARccOS entfernen
-11=Xreveal needs <a>libdvdcss-2.dll</a> to open DVDs.
+11=Xreveal benötigt <a>libdvdcss-2.dll</a> um DVDs zu öffnen
 
 [DIALOG_11]
 0=Blu-Ray
-3=&Enable Blu-ray support
+3=&Blu-ray Unterstützung aktivieren
 4=BD+ Schutz entfernen
 5=Blu-Ray Region Code entfernen
 6=Disc-Region:
@@ -77,41 +77,41 @@ Author=The Punisher
 
 [DIALOG_12]
 0=KeyDB
-3=Xreveal beinhaltet keine Entschlüsselungsdateien. Bitte tragen sie hier die entsprechenden Pfade ein. <a>Weitere Details</a>.
+3=Xreveal beinhaltet keine Entschlüsselungsdateien. Bitte tragen sie hier die entsprechenden Pfade ein. <a>Weitere Details</a>
 4=KeyDB.cfg Speicherort
 5=BD+ Fixup Tables (FUT) Speicherort
 6=Online nach einem Schlüssel &suchen
 
 [DIALOG_13]
 0=Laufwerke
-3=&Wählen Sie die Laufwerke die Xreveal scannen soll.
+3=&Wählen Sie die Laufwerke die Xreveal scannen soll
 5=&AutoRun (inf-Datei) und AutoPlay (Windows) deaktivieren
 8=UHD-&LibreDrive aktivieren
 
 [DIALOG_14]
 1=Start
-3=Source
-4=Destination
-5=Options
+3=Quelle
+4=Speicherort
+5=Einstellungen
 6=Info
-7=Type:
-8=Capacity:
-9=Protection:
-10=Free space:
-11=Capacity:
-12=&Keep protection
-13=&Verify content hash
-14=Create &md5 checksum file
-15=Create &dvdid.xml
+7=Typ:
+8=Kapazität:
+9=Schutz:
+10=Freier Speicherplatz:
+11=Kapazität:
+12=&Schutz nicht entfernen
+13=&Überprüfung: Content Hash
+14=Erstelle &md5 checksum Datei
+15=Erstelle &dvdid.xml
 
 [DIALOG_15]
 0=Xreveal
-3=Source:
-4=Destination:
-6=Time elapsed:
-7=Time remaining:
-8=Read errors:
-9=Read rate:
+3=Quelle:
+4=Speicherort:
+6=Verstrichene Zeit:
+7=Verbleibende Zeit:
+8=Lesefehler:
+9=Leserate:
 
 [DIALOG_16]
 0=Player-Region
@@ -125,20 +125,20 @@ Author=The Punisher
 [DIALOG_18]
 0=Xreveal registrieren
 3=Hilfe
-4=Fügen Sie den Lizenzschlüssel, welchen Sie erhalten haben, in das Feld unterhalb ein.
+4=Fügen Sie den Lizenzschlüssel, welchen Sie erhalten haben, in das Feld unterhalb ein
 
 [DIALOG_19]
 0=Hotkeys
-3=You can create system-wide hotkeys to trigger some actions while Xreveal is running.
-4=Show Xreveal system tray menu:
-5=Show settings window:
-6=Enable/Disable Xreveal:
-7=Rip to ISO file:
-8=Rip to folder:
+3=Hier können System-Hotkeys erstellen die ausgeführt werden während Xreveal aktiv ist
+4=Zeige Xreveal-Menü:
+5=Zeige Einstellungen:
+6=Aktivieren/Deaktivieren Xreveal:
+7=Als ISO rippen:
+8=In einen Ordner rippen:
 
 [DIALOG_20]
 0=HD DVD
-3=&Enable HD DVD support
+3=&HD DVD Unterstützung aktivieren
 4=Entfernung von z.B. Studio Trailer, uä.
 5=Benutzereinschränkungen entfernen (UOP)
 6=Entfernung von Benutzereinschränkungen für z.B. PowerDVD, uä.
@@ -158,10 +158,10 @@ Author=The Punisher
 
 [DIALOG_24]
 0=Laufwerk-Informationen
-3=Drive:
-4=Serial number:
-5=Vendor specific:
-6=Bus encryption capable:
+3=Laufwerk:
+4=Seriennummer:
+5=Herstellerspezifisch:
+6=Bus-Verschlüsserungsfähig:
 
 [DIALOG_25]
 0=Importieren...
@@ -173,18 +173,18 @@ Author=The Punisher
 0=Content Hash Kontrolle
 
 [DIALOG_27]
-0=Sounds
-3=Play sound after opening disc
-4=Play sound after ripping disc
-5=Success sound:
-6=Error sound:
+0=Klänge
+3=Einen Klang abspielen nach dem Öffnen einer Disc
+4=Einen Klang abspielen nach dem Rippen einer Disc
+5=Erfolgsmeldung:
+6=Fehlermeldung:
 
 [DIALOG_28]
-0=Create Dump File
-3=Please wait...
-4=Adding %s...
-5=<a>How to submit dump files?</a>
-6=The file has been successfully created.
+0=Erstelle Dump-Datei
+3=Bitte haben Sie etwas Geduld...
+4=Erstelle %s...
+5=<a>Wie Sie die Dump-Datei schicken können</a>
+6=Die Dump-Datei wurde erfolgreich erstellt.
 
 [DIALOG_A]
 0=Software-Update
@@ -232,11 +232,11 @@ Author=The Punisher
 18=Xreveal funktioniert nicht richtig wenn %s ausgeführt wird.\n\nMöchten Sie diese App schliessen?
 19=Xreveal durchsucht Laufwerk %C:
 20=Die eingelegte Disc wird in Kürze verfügbar sein, bitte haben Sie etwas Geduld!
-21=Xreveal is not active for drive %C:!\n\nIn order to rip a copy-protected disc, Xreveal must be active for the drive.
-22=Directory '%s' has not enough space!\nYou need an additional %s.
+21=Xreveal ist nicht für Laufwerk %C: aktiviert!\n\nUm eine kopiergeschützte Disc zu rippen, muss Xreveal für das Laufwerk aktiviert sein.
+22=Kein ausreichender Speicherplatz in '%s' \nBenötigt: Zusätzlich %s.
 23=Kopieren von %s ...
 24=%.1f MB/s
-25=Operation successfully completed!
+25=Vorgang erfolgreich abgeschlossen!
 26=Keine Entschlüsselungsdatei in {%s} gefunden
 27=Keine BD+ FUT gefunden
 28=Xreveal konnte die Disc nicht öffnen. Fehler-Code: %s.
@@ -252,8 +252,8 @@ Author=The Punisher
 38=%C:
 39=%C:\[%S]
 40=&Status
-41=&Open in Explorer
-42=&Create Dump File
+41=&In Explorer öffnen
+42=&Erstelle Dump-Datei
 43=BD+ Fixup-Table &zeigen
 44=Auf &Festplattenlaufwerk rippen ...
 45=Als &Image auf Laufwerk rippen ...
@@ -271,7 +271,7 @@ Author=The Punisher
 57=Dieses Programm ist Freeware.\n\nWenn es ihnen gefällt, können sie gerne auf die <a>Pro-Version</a> erweitern.
 58=%s ist bereits vorhanden.\nMöchten Sie diese ersetzen?
 59=Sind Sie sicher, dass Sie abbrechen möchten?
-60=Your license expired on %s.
+60=Ihre Lizenz ist am %s erloschen
 61=Player
 62=Regionalcode
 63=Änderungen verbleibend
@@ -315,7 +315,7 @@ Author=The Punisher
 101=ISO überprüfen
 102=Ordner überprüfen
 103=Laufwerk überprüfen
-104=Unterstützt Bus Encryption
+104=Unterstützt Bus-Verschlüsserung
 105=%s (Laufwerk: %s)
 106=Öffne Log Ordner
 107=Einstellungen
@@ -323,28 +323,28 @@ Author=The Punisher
 109=Eingabeaufforderungsversion (Windows/macOS/Linux)
 110=Abbrechen
 111=Herstellerspezifisch
-112=Directory %s doesn't exist. Do you want to create it?
-113=When done: 
-114=Do nothing
+112=Verzeichnis %s exitiert nicht. Soll es erstellt werden ?
+113=Wenn fertig: 
+114=Nichts tun
 115=, 
-116=Eject disc
-117=Play sound
-118=Quit Xreveal
-119=No action
-120=Shutdown
-121=Sleep
-122=Hibernate
-123=Lock system
-124=Log off
-125=All Files
-126=ISO Files
-127=WAV Files
-128=KeyDB Files
-129=Database Files
-130=Select or drop the WAV file here
-131=Select or drop the KeyDB.cfg here
-132=%u%% complete
-133=Error reading from drive %C:!\nSectors: %u-%u
-134=Error reading %s!\nSectors: %u-%u
-135=Abort request acknowledged
-136=Copying...
+116=Disc auswerfen
+117=Klang abspielen
+118=Xreveal schliessen
+119=Keine Massnahme
+120=Herunterfahren
+121=Ruhezustand
+122=Laptop-Ruhezustand
+123=System sperren
+124=Abmelden
+125=Alle Dateien
+126=ISO Dateien
+127=WAV Dateien
+128=KeyDB Dateien
+129=Database Dateien
+130=Wählen oder kopieren Sie eine WAV hier
+131=Wählen oder kopieren Sie eine KeyDB.cfg hier
+132=%u%% komplett
+133=Lesefehler in Laufwerk %C:!\nSektoren: %u-%u
+134=Lesefehler %s!\nSektoren: %u-%u
+135=Abbruchanfrage bestätigt
+136=Kopieren...
