--- a/Xreveal_FRA.ini
+++ b/Xreveal_FRA.ini
@@ -133,7 +133,7 @@ Author=Andex
 4=Menu de Xreveal:
 5=Paramètres:
 6=Activer/Désactiver:
-7=Copier en ISO:
+7=Copier en fichier ISO:
 8=Copier dans un dossier:
 
 [DIALOG_20]
@@ -164,10 +164,10 @@ Author=Andex
 6=Bus Encryption:
 
 [DIALOG_25]
-0=Importer...
-3=Source 'keydb.db':
+0=Importer un catalogue...
+3=Source de 'keydb.db':
 4=Sélectionnez ou déposer le fichier 'keydb.db' ici
-5=Destination 'keydb.db':
+5=Destination de 'keydb.db':
 
 [DIALOG_26]
 0=Vérification
@@ -234,9 +234,9 @@ Author=Andex
 20=Le disque sera disponible dans quelques instants, merci de patienter...
 21=Xreveal is not active for drive %C:!\n\nIn order to rip a copy-protected disc, Xreveal must be active for the drive.
 22=Directory '%s' has not enough space!\nYou need an additional %s.
-23=Copie en cours %s...
+23=Copie de '%s' en cours...
 24=%.1f Mo/s
-25=Operation successfully completed!
+25=Processus terminé avec succès!
 26=Pas de clé de déchiffrement trouvée dans {%s}!
 27=Pas de BD+/FUT trouvé!
 28=Xreveal n'a pas réussi à ouvrir le disque!\nCode d'erreur: %s
@@ -244,7 +244,7 @@ Author=Andex
 30=Fabricant
 31=Produit
 32=Révision
-33=Date Firmware
+33=Date du firmware
 34=N° de série
 35=N/A
 36=Oui
@@ -264,13 +264,13 @@ Author=Andex
 50=&Outils
 51=À propos de &Xreveal
 52=&Quitter
-53=&Éjecter
+53=&Ejecter
 54=&Charger
 55=&Propriétés
 56=Aucun
 57=Vous utilisez la version gratuite de Xreveal!\n\nPassez en <a>version Pro</a> pour débloquer des fonctionnalités supplémentaires ;-)
 58='%s' existe déjà!\nVoulez-vous le remplacer?
-59=Êtes-vous sûr de vouloir annuler?
+59=Etes-vous sûr de vouloir annuler?
 60=Votre licence a expiré le %s!
 61=Lecteur
 62=Code région
@@ -295,7 +295,7 @@ Author=Andex
 81=Ajouté le
 82=MKB
 83=Liste de lecture principale
-84=Date BDP
+84=Date BD+
 85=
 86=VID
 87=MK
@@ -327,11 +327,11 @@ Author=Andex
 113=Quand fini: 
 114=Ne rien faire
 115=, 
-116=Éjecter le disque
+116=Ejecter le disque
 117=Lire un son
-118=Quit Xreveal (No more used)
+118=
 119=Aucune action
-120=Eteindre l'ordinateur
+120=Arrêter l'ordinateur
 121=Mettre en veille
 122=Mettre en veille prolongée
 123=Verrouiller le système
@@ -340,11 +340,11 @@ Author=Andex
 126=Fichiers ISO
 127=Fichiers WAV
 128=Fichiers KeyDB
-129=Fichiers Base de Données
+129=Fichiers Catalogue
 130=Sélectionner ou déposer un fichier WAV ici
 131=Sélectionner ou déposer le fichier 'KeyDB.cfg' ici
 132=%u%% terminé!
 133=Erreur de lecture sur le lecteur %C:!\nSecteurs: %u-%u
 134=Erreur de lecture %s!\nSecteurs: %u-%u
-135=Demande d'abandon autorisée!
+135=Demande d'abandon reconnue!
 136=Copie en cours...
