Update DEU/CHS files

--- a/Xreveal_DEU.ini
+++ b/Xreveal_DEU.ini
@@ -1,7 +1,7 @@
 ﻿[INFO]
 ID=0x0407
 Name=German (Deutsch)
-Version=2.6.8.4
+Version=2.6.8.5
 Author=The Punisher
 1=OK
 2=Abbrechen
@@ -129,7 +129,7 @@ Author=The Punisher
 
 [DIALOG_19]
 0=Hotkeys
-3=Hier können System-Hotkeys erstellen die ausgeführt werden während Xreveal aktiv ist
+3=Hier können Sie System-Hotkeys erstellen die ausgeführt werden während Xreveal aktiv ist
 4=Zeige Xreveal-Menü:
 5=Zeige Einstellungen:
 6=Aktivieren/Deaktivieren Xreveal:
@@ -180,11 +180,11 @@ Author=The Punisher
 6=Fehlermeldung:
 
 [DIALOG_28]
-0=Erstelle Dump-Datei
+0=Erstelle Infodump-Datei
 3=Bitte haben Sie etwas Geduld...
 4=Erstelle %s...
-5=<a>Wie Sie die Dump-Datei schicken können</a>
-6=Die Dump-Datei wurde erfolgreich erstellt.
+5=<a>Wie Sie die Infodump-Datei schicken können</a>
+6=Die Infodump-Datei wurde erfolgreich erstellt.
 
 [DIALOG_A]
 0=Software-Update
@@ -253,7 +253,7 @@ Author=The Punisher
 39=%C:\[%S]
 40=&Status
 41=&In Explorer öffnen
-42=&Erstelle Dump-Datei
+42=&Erstelle Infodump-Datei
 43=BD+ Fixup-Table &zeigen
 44=Auf &Festplattenlaufwerk rippen ...
 45=Als &Image auf Laufwerk rippen ...
