--- a/Xreveal_CHS.ini
+++ b/Xreveal_CHS.ini
@@ -1,8 +1,8 @@
 ﻿[INFO]
 ID=0x0804
 Name=Chinese (简体中文)
-Version=2.6.6
-Author=
+Version=2.6.9
+Author=Tanuki
 1=确定
 2=取消
 
@@ -42,8 +42,8 @@ Author=
 6=托盘菜单中列出光驱列表(&L)
 7=自动检查更新(&C)
 8=<a>现在检查</a>
-9=自动上报打开失败信息以改进 Xreveal (&R)
-10=&Prevent the system from sleeping while ripping
+9=自动上报打开失败信息以改进 Xreveal(&R)
+10=防止系统在翻录碟片时休眠(&P)
 
 [DIALOG_9]
 0=音乐 CD
@@ -51,18 +51,18 @@ Author=
 
 [DIALOG_10]
 0=DVD
-3=&Enable DVD support
+3=启用 DVD 支持(&E)
 4=移除 RC (区域码)
 5=移除 RCE
 6=光盘区域码:
 7=移除 APS
 8=移除 UOP (禁止用户操作)
 9=移除 ARccOS
-11=Xreveal needs <a>libdvdcss-2.dll</a> to open DVDs.
+11=Xreveal 需要 <a>libdvdcss-2.dll</a> 才能打开 DVD.
 
 [DIALOG_11]
 0=BD
-3=&Enable Blu-ray support
+3=启用 BD 支持(&E)
 4=移除 BD+
 5=移除 RC (区域码)
 6=光盘区域码:
@@ -83,35 +83,35 @@ Author=
 6=在线查找密钥(&F)
 
 [DIALOG_13]
-0=我的驱动器
+0=我的光驱
 3=选择你想被 Xreveal 扫描的光驱(&S):
 5=禁用自动播放(&D)
 8=对于 UHD 启用 &LibreDrive
 
 [DIALOG_14]
-1=Start
-3=Source
-4=Destination
-5=Options
-6=Info
-7=Type:
-8=Capacity:
-9=Protection:
-10=Free space:
-11=Capacity:
-12=&Keep protection
-13=&Verify content hash
-14=Create &md5 checksum file
-15=Create &dvdid.xml
+1=开始
+3=源
+4=目标
+5=选项
+6=信息
+7=类型:
+8=容量:
+9=保护:
+10=剩余空间:
+11=容量:
+12=保留保护(&K)
+13=验证视频文件哈希值(&V)
+14=创建 &md5 校验文件
+15=创建 &dvdid.xml
 
 [DIALOG_15]
 0=Xreveal
-3=Source:
-4=Destination:
-6=Time elapsed:
-7=Time remaining:
-8=Read errors:
-9=Read rate:
+3=源:
+4=目标:
+6=已用时间:
+7=剩余时间:
+8=读错误:
+9=读速度:
 
 [DIALOG_16]
 0=播放器区域码
@@ -129,16 +129,16 @@ Author=
 
 [DIALOG_19]
 0=热键
-3=You can create system-wide hotkeys to trigger some actions while Xreveal is running.
-4=Show Xreveal system tray menu:
-5=Show settings window:
-6=Enable/Disable Xreveal:
-7=Rip to ISO file:
-8=Rip to folder:
+3=您可以创建系统范围的热键，以便在 Xreveal 运行时触发某些操作。
+4=显示系统托盘菜单:
+5=显示设置窗口:
+6=启用/禁用 Xreveal:
+7=复制到 ISO 文件:
+8=复制到文件夹:
 
 [DIALOG_20]
 0=HD DVD
-3=&Enable HD DVD support
+3=启用 HD DVD 支持(&E)
 4=移除片头
 5=移除 UOP (用户操作禁止)
 6=移除家长限制
@@ -154,37 +154,37 @@ Author=
 4=在 KeyDB.cfg 中未找到可用的解密密钥。是否试用在线查找密钥功能？
 
 [DIALOG_23]
-0=Disc Information
+0=碟片信息
 
 [DIALOG_24]
-0=Drive Information
-3=Drive:
-4=Serial number:
-5=Vendor specific:
-6=Bus encryption capable:
+0=光驱信息
+3=光驱:
+4=序列号:
+5=厂商自定义:
+6=支持总线加密:
 
 [DIALOG_25]
-0=Import...
-3=Source keydb.db:
-4=Select or drop source keydb.db here
-5=Destination keydb.db:
+0=导入...
+3=源 keydb.db:
+4=在此处选择或拖放源 keydb.db
+5=目标 keydb.db:
 
 [DIALOG_26]
-0=Content Hash Verifier
+0=视频哈希值校验
 
 [DIALOG_27]
-0=Sounds
-3=Play sound after opening disc
-4=Play sound after ripping disc
-5=Success sound:
-6=Error sound:
+0=声音
+3=打开光盘后播放声音
+4=翻录光盘后播放声音
+5=成功声音:
+6=错误声音:
 
 [DIALOG_28]
-0=Create Dump File
-3=Please wait...
-4=Adding %s...
-5=<a>How to submit dump files?</a>
-6=The file has been successfully created.
+0=创建dump文件
+3=请等待...
+4=提交 %s...
+5=<a>如何提交?</a>
+6=文件已成功创建。
 
 [DIALOG_A]
 0=软件更新
@@ -232,11 +232,11 @@ Author=
 18=%s 将干扰 Xreveal 的正常工作！\n\n是否关闭它?
 19=Xreveal 正在扫描光驱 %C:
 20=你置入的光盘将很快可用。请稍候!
-21=Xreveal is not active for drive %C:!\n\nIn order to rip a copy-protected disc, Xreveal must be active for the drive.
-22=Directory '%s' has not enough space!\nYou need an additional %s.
+21=Xreveal 对光驱 %C 未处于活动状态：！\n\n为了翻录受复制保护的光盘，Xreveal 必须对光驱处于活动状态。
+22=目录 '%s' 没有足够的空间！\n您需要额外 %s 空间。
 23=拷贝 %s...
 24=%.1f MB/s
-25=Operation successfully completed!
+25=操作成功完成！
 26=在{%s}中没找到解密此光碟的密钥
 27=没找到 BD+ FUT
 28=Xreveal 无法打开光碟, 错误码: %s.
@@ -312,39 +312,39 @@ Author=
 98=导入(&I)...
 99=定位 keydb.db(&R)
 100=注释
-101=Verify ISO
-102=Verify Folder
-103=Verify Drive
-104=Bus Encryption Capable
-105=%s (Drive: %s)
-106=Open Log Folder
-107=Options
-108=Verbose output
-109=Command line version (Windows/macOS/Linux)
-110=Abort
-111=Vendor specific
-112=Directory %s doesn't exist. Do you want to create it?
-113=When done: 
-114=Do nothing
+101=验证镜像文件
+102=验证文件夹
+103=验证光驱
+104=支持总线加密
+105=%s (光驱: %s)
+106=打开日志目录
+107=选项
+108=详细输出
+109=命令行版本 (Windows/macOS/Linux)
+110=中止
+111=厂商自定义
+112=目录 %s 不存在。你想创建它吗？
+113=完成后: 
+114=无操作
 115=, 
-116=Eject disc
-117=Play sound
-118=Quit Xreveal
-119=No action
-120=Shutdown
-121=Sleep
-122=Hibernate
-123=Lock system
-124=Log off
-125=All Files
-126=ISO Files
-127=WAV Files
-128=KeyDB Files
-129=Database Files
-130=Select or drop the WAV file here
-131=Select or drop the KeyDB.cfg here
-132=%u%% complete
-133=Error reading from drive %C:!\nSectors: %u-%u
-134=Error reading %s!\nSectors: %u-%u
-135=Abort request acknowledged
-136=Copying...
+116=弹出光盘
+117=播放声音
+118=退出 Xreveal
+119=无操作
+120=关机
+121=睡眠
+122=休眠
+123=锁定系统
+124=注销
+125=所有文件
+126=ISO 文件
+127=WAV 文件
+128=KeyDB 文件
+129=数据库文件
+130=在此处选择或拖放 WAV 文件
+131=在此处选择或拖放 KeyDB.cfg 文件
+132=%u%% 已完成
+133=从光驱 %C 读取时出错！\n扇区： %u-%u
+134=读取 %s 时出错！\n扇区： %u-%u
+135=已确认中止请求
+136=正在复制...
