0-Blu-ray to 0=BD & UHD

--- a/Xreveal_CHS.ini
+++ b/Xreveal_CHS.ini
@@ -61,7 +61,7 @@ Author=Tanuki
 11=Xreveal 需要 <a>libdvdcss-2.dll</a> 才能打开 DVD.
 
 [DIALOG_11]
-0=BD
+0=BD & UHD
 3=启用 BD 支持(&E)
 4=移除 BD+
 5=移除 RC (区域码)
