--- a/Xreveal_DEU.ini
+++ b/Xreveal_DEU.ini
@@ -61,7 +61,7 @@ Author=The Punisher
 11=Xreveal benötigt <a>libdvdcss-2.dll</a> um DVDs zu öffnen
 
 [DIALOG_11]
-0=Blu-Ray
+0=BD & UHD
 3=&Blu-ray Unterstützung aktivieren
 4=BD+ Schutz entfernen
 5=Blu-Ray Region Code entfernen
