--- a/Xreveal_FRA.ini
+++ b/Xreveal_FRA.ini
@@ -61,7 +61,7 @@ Author=Andex
 11=Note: vous devez utiliser le fichier <a>libdvdcss-2.dll</a> pour que Xreveal puisse ouvrir un DVD.
 
 [DIALOG_11]
-0=Blu-ray
+0=BD & UHD
 3=&Activer la prise en charge des Blu-ray
 4=Supprimer &BD+
 5=Supprimer &RC (Region Code)
