--- a/Xreveal_ENU.ini
+++ b/Xreveal_ENU.ini
@@ -61,7 +61,7 @@ Author=
 11=Xreveal needs <a>libdvdcss-2.dll</a> to open DVDs.
 
 [DIALOG_11]
-0=Blu-ray
+0=BD & UHD
 3=&Enable Blu-ray support
 4=Remove &BD+
 5=Remove &RC (Region Code)
