--- a/Xreveal_DEU.ini
+++ b/Xreveal_DEU.ini
@@ -1,7 +1,7 @@
 ﻿[INFO]
 ID=0x0407
 Name=German (Deutsch)
-Version=2.6.8.5
+Version=2.6.8.7
 Author=The Punisher
 1=OK
 2=Abbrechen
@@ -64,14 +64,14 @@ Author=The Punisher
 0=BD & UHD
 3=&Blu-ray Unterstützung aktivieren
 4=BD+ Schutz entfernen
-5=Blu-Ray Region Code entfernen
+5=Region Code entfernen
 6=Disc-Region:
 7=Ländercode:
 8=Benutzereinschränkungen entfernen
 9=Copy-Control-Informationen entfernen
 10=BD-Live deaktivieren
 11=Angeschlossenes 3D-Display simulieren
-12=Ordner auf der Disc umbenennen
+12=Ordner temporär umbenennen
 13=&AES Hardwarebeschleunigung nutzen
 14=<a>Benchmark</a>
 
@@ -132,7 +132,7 @@ Author=The Punisher
 3=Hier können Sie System-Hotkeys erstellen die ausgeführt werden während Xreveal aktiv ist
 4=Zeige Xreveal-Menü:
 5=Zeige Einstellungen:
-6=Aktivieren/Deaktivieren Xreveal:
+6=Xreveal aktivieren/deaktivieren:
 7=Als ISO rippen:
 8=In einen Ordner rippen:
 
