--- a/Xreveal_FRA.ini
+++ b/Xreveal_FRA.ini
@@ -62,7 +62,7 @@ Author=Andex
 
 [DIALOG_11]
 0=BD & UHD
-3=&Activer la prise en charge des Blu-ray
+3=&Activer la prise en charge des Blu-ray BD et UHD
 4=Supprimer &BD+
 5=Supprimer &RC (Region Code)
 6=Région du &disque:
@@ -71,16 +71,16 @@ Author=Andex
 9=Supprimer &CCI (Copy Control Information)
 10=Désactiver BD-&Live
 11=&Simuler un affichage 3D
-12=Nom des dossiers
+12=Nom des dossiers 'spéciaux'
 13=Utiliser l'accélération &matérielle
 14= <a>Test</a>
 
 [DIALOG_12]
 0=KeyDB
-3=Note: Xreveal ne contient aucune clé de déchiffrement!\nVous devez utiliser un fichier <a>KeyDB.cfg</a> pour que Xreveal puisse fonctionner.
+3=Note: Xreveal ne contient aucune clé de déchiffrement!\nVous devez utiliser le fichier <a>KeyDB.cfg</a> pour que Xreveal puisse fonctionner.
 4=Emplacement du fichier 'KeyDB.cfg'
 5=Emplacement des correctifs BD+/FUT (Fix Up Table)
-6=&Rechercher la clé en ligne
+6=&Rechercher la clé en ligne (Connexion Internet requise)
 
 [DIALOG_13]
 0=Lecteurs
@@ -287,7 +287,7 @@ Author=Andex
 73=Réinitialiser toutes les options à leurs valeurs par défaut?\n\nCliquer 'Non' réinitialisera juste les options de la page courante.
 74=N°
 75=Etat
-76=Etiquette
+76=Titre
 77=Type
 78=Taille
 79=Date
@@ -302,26 +302,26 @@ Author=Andex
 88=VUK
 89=UK
 90=&Affichage
-91=&Supprimer "%s"
+91=&Supprimer '%s'
 92=Supprimer &tout
-93=Etes-vous sûr de vouloir supprimer "%s"?
-94=Etes-vous sûr de vouloir supprimer tout le catalogue?
+93=Etes-vous sûr de vouloir supprimer '%s'?
+94=Etes-vous sûr de vouloir vider le catalogue?
 95=Cette fonctionnalité n'est disponible qu'en <a>version Pro</a>
 96=&Actualiser
 97=&Editer...
-98=&Importer...
-99=&Ouvrir l'emplacement du fichier
+98=&Importer un catalogue...
+99=&Ouvrir l'emplacement du catalogue
 100=Commentaire
-101=Vérifier ISO
-102=Vérifier le dossier
-103=Vérifier le lecteur
-104='Bus Encryption' possible
+101=Vérifier un fichier ISO
+102=Vérifier un dossier
+103=Vérifier un lecteur
+104=Bus Encryption possible
 105=%s (Lecteur: %s)
 106=Ouvrir le dossier '&log'
 107=Options
 108=Sortie détaillée
 109=Version en ligne de commande (Windows/macOS/Linux)
-110=Abandonner
+110=Stop!
 111=Fabricant
 112=Le dossier '%s' n'existe pas!\nVoulez-vous le créer?
 113=Quand fini: 
@@ -329,12 +329,12 @@ Author=Andex
 115=, 
 116=Ejecter le disque
 117=Lire un son
-118=
+118=Quitter Xreveal
 119=Aucune action
 120=Arrêter l'ordinateur
 121=Mettre en veille
 122=Mettre en veille prolongée
-123=Verrouiller le système
+123=Verrouiller la session
 124=Se déconnecter
 125=Tous les fichiers
 126=Fichiers ISO
