Added: The Pro version supports removing bd+ protection with <a>bd+.dll</a>.

--- a/Xreveal_CHS.ini
+++ b/Xreveal_CHS.ini
@@ -81,6 +81,7 @@ Author=Tanuki
 4=KeyDB.cfg 路径
 5=FUT 路径
 6=在线查找密钥(&F)
+7=Pro版支持用 <a>bd+.dll</a> 移除 BD+ 保护.
 
 [DIALOG_13]
 0=我的光驱
@@ -348,3 +349,4 @@ Author=Tanuki
 134=读取 %s 时出错！\n扇区： %u-%u
 135=已确认中止请求
 136=正在复制...
+137=Pro 版本
