--- a/Xreveal_DEU.ini
+++ b/Xreveal_DEU.ini
@@ -81,6 +81,7 @@ Author=The Punisher
 4=KeyDB.cfg Speicherort
 5=BD+ Fixup Tables (FUT) Speicherort
 6=Online nach einem Schlüssel &suchen
+7=The Pro version supports removing bd+ protection with <a>bd+.dll</a>.
 
 [DIALOG_13]
 0=Laufwerke
@@ -348,3 +349,4 @@ Author=The Punisher
 134=Lesefehler %s!\nSektoren: %u-%u
 135=Abbruchanfrage bestätigt
 136=Kopieren...
+137=Pro feature
