--- a/Xreveal_ENU.ini
+++ b/Xreveal_ENU.ini
@@ -81,6 +81,7 @@ Author=
 4=KeyDB.cfg location
 5=FUT location
 6=&Find key online
+7=The Pro version supports removing bd+ protection with <a>bd+.dll</a>.
 
 [DIALOG_13]
 0=My Drives
@@ -348,3 +349,4 @@ Author=
 134=Error reading %s!\nSectors: %u-%u
 135=Abort request acknowledged
 136=Copying...
+137=Pro feature
