--- a/Xreveal_JPN.ini
+++ b/Xreveal_JPN.ini
@@ -81,6 +81,7 @@ Author=Re*Index.(ot_inc)
 4=KeyDB.cfgの場所
 5=BD+フィックスアップテーブル(FUT)の位置
 6=&Find key online
+7=The Pro version supports removing bd+ protection with <a>bd+.dll</a>.
 
 [DIALOG_13]
 0=My Drives
@@ -348,3 +349,4 @@ Author=Re*Index.(ot_inc)
 134=Error reading %s!\nSectors: %u-%u
 135=Abort request acknowledged
 136=Copying...
+137=Pro feature
