--- a/Xreveal_KOR.ini
+++ b/Xreveal_KOR.ini
@@ -81,6 +81,7 @@ Author=VenusGirl (비너스걸)
 4=KeyDB.cfg 위치
 5=BD+ 테이블 고정 (FUT) 위치
 6=온라인에서 키 찾기(&F)
+7=The Pro version supports removing bd+ protection with <a>bd+.dll</a>.
 
 [DIALOG_13]
 0=내 드라이버
@@ -348,3 +349,4 @@ Author=VenusGirl (비너스걸)
 134=Error reading %s!\nSectors: %u-%u
 135=Abort request acknowledged
 136=Copying...
+137=Pro feature
