--- a/Xreveal_RUS.ini
+++ b/Xreveal_RUS.ini
@@ -81,6 +81,7 @@ Author=jekovcar
 4=Местоположение KeyDB.cfg
 5=Локация FUT
 6=&Найти ключ онлайн
+7=The Pro version supports removing bd+ protection with <a>bd+.dll</a>.
 
 [DIALOG_13]
 0=Мои диски
@@ -348,3 +349,4 @@ Author=jekovcar
 134=Error reading %s!\nSectors: %u-%u
 135=Abort request acknowledged
 136=Copying...
+137=Pro feature
