--- a/Xreveal_SPA.ini
+++ b/Xreveal_SPA.ini
@@ -81,6 +81,7 @@ Author=Steven Rogers
 4=Ubicación de KeyDB.cfg
 5=Ubicación de BD+ fixup tables (FUT)
 6=&Find key online
+7=The Pro version supports removing bd+ protection with <a>bd+.dll</a>.
 
 [DIALOG_13]
 0=My Drives
@@ -348,3 +349,4 @@ Author=Steven Rogers
 134=Error reading %s!\nSectors: %u-%u
 135=Abort request acknowledged
 136=Copying...
+137=Pro feature
