--- a/Xreveal_BUL.ini
+++ b/Xreveal_BUL.ini
@@ -81,6 +81,7 @@ Author=jekovcar
 4=KeyDB.cfg местоположение
 5=FUT местоположение
 6=&Търси ключ онлайн
+7=The Pro version supports removing bd+ protection with <a>bd+.dll</a>.
 
 [DIALOG_13]
 0=Моите Приводи
@@ -348,3 +349,4 @@ Author=jekovcar
 134=Error reading %s!\nSectors: %u-%u
 135=Abort request acknowledged
 136=Copying...
+137=Pro feature
