--- a/Xreveal_ITA.ini
+++ b/Xreveal_ITA.ini
@@ -81,6 +81,7 @@ Author=bovirus (bovirus@gmail.com)
 4=Percorso file KeyDB.cfg
 5=Percorso file FUT (tavella correzioni) BD+
 6=&Find key online
+7=The Pro version supports removing bd+ protection with <a>bd+.dll</a>.
 
 [DIALOG_13]
 0=Mie unità
@@ -348,3 +349,4 @@ Author=bovirus (bovirus@gmail.com)
 134=Error reading %s!\nSectors: %u-%u
 135=Abort request acknowledged
 136=Copying...
+137=Pro feature
