--- a/Xreveal_PLK.ini
+++ b/Xreveal_PLK.ini
@@ -81,6 +81,7 @@ Author=Fresta
 4=Lokalizacja KeyDB.cfg:
 5=Lokalizacja BD+ fixup table (FUT):
 6=&Find key online
+7=The Pro version supports removing bd+ protection with <a>bd+.dll</a>.
 
 [DIALOG_13]
 0=My Drives
@@ -348,3 +349,4 @@ Author=Fresta
 134=Error reading %s!\nSectors: %u-%u
 135=Abort request acknowledged
 136=Copying...
+137=Pro feature
