--- a/Xreveal_SLV.ini
+++ b/Xreveal_SLV.ini
@@ -81,6 +81,7 @@ Author=Jadran Rudec, E-pošta: jrudec@gmail.com
 4=Lokacija KeyDB.cfg
 5=Lokacija BD+  tabel popravkov (FUT)
 6=&Find key online
+7=The Pro version supports removing bd+ protection with <a>bd+.dll</a>.
 
 [DIALOG_13]
 0=My Drives
@@ -348,3 +349,4 @@ Author=Jadran Rudec, E-pošta: jrudec@gmail.com
 134=Error reading %s!\nSectors: %u-%u
 135=Abort request acknowledged
 136=Copying...
+137=Pro feature
