--- a/Xreveal_FRA.ini
+++ b/Xreveal_FRA.ini
@@ -81,7 +81,7 @@ Author=Andex
 4=Emplacement du fichier 'KeyDB.cfg'
 5=Emplacement des correctifs BD+/FUT (Fix Up Table)
 6=&Rechercher la clé en ligne (Connexion Internet requise)
-7=The Pro version supports removing bd+ protection with <a>bd+.dll</a>.
+7=Note: La version Pro peut supprimer automatiquement BD+ en utilisant <a>bd+.dll</a>.
 
 [DIALOG_13]
 0=Lecteurs
@@ -349,4 +349,4 @@ Author=Andex
 134=Erreur de lecture %s!\nSecteurs: %u-%u
 135=Demande d'abandon reconnue!
 136=Copie en cours...
-137=Pro feature
+137=Fonctionnalité Pro
