--- a/Xreveal_CHS.ini
+++ b/Xreveal_CHS.ini
@@ -81,7 +81,7 @@ Author=Tanuki
 4=KeyDB.cfg 路径
 5=FUT 路径
 6=在线查找密钥(&F)
-7=Pro版支持用 <a>bd+.dll</a> 移除 BD+ 保护.
+7=专业版支持用 <a>bd+.dll</a> 移除 BD+ 保护.
 
 [DIALOG_13]
 0=我的光驱
@@ -239,7 +239,7 @@ Author=Tanuki
 24=%.1f MB/s
 25=操作成功完成！
 26=在{%s}中没找到解密此光碟的密钥
-27=没找到 BD+ FUT
+27=未找到 BD+ FUT
 28=Xreveal 无法打开光碟, 错误码: %s.
 29=光驱
 30=厂商
@@ -253,8 +253,8 @@ Author=Tanuki
 38=%C:
 39=%C:\[%S]
 40=状态(&S)
-41=&Open in Explorer
-42=&Create Dump File
+41=在资源管理器中打开(&O)
+42=生成&Dump文件
 43=显示 BD+ 修复表(&S)
 44=复制到硬盘...
 45=复制到映像...
@@ -269,10 +269,10 @@ Author=Tanuki
 54=载入光驱(&L)
 55=属性(&P)
 56=无
-57=你正在使用免费版本，升级到<a>Pro 版本</a>可解锁更多功能。
+57=你正在使用免费版，升级到<a>专业版</a>可解锁更多功能。
 58=%s 已存在。\n你想替换它吗?
 59=你确定要取消吗?
-60=Your license expired on %s.
+60=你的注册码已于 %s 过期。
 61=播放器
 62=区码
 63=剩余次数
@@ -307,7 +307,7 @@ Author=Tanuki
 92=删除所有 (&A)
 93=你确定要删除 "%s" 吗?
 94=你确定要删除所有记录吗?
-95=此功能只存在于 <a>Pro 版本</a>。
+95=升级为 <a>专业版</a> 才能使用此功能。
 96=刷新(&R)
 97=编辑(&E)
 98=导入(&I)...
@@ -342,11 +342,11 @@ Author=Tanuki
 127=WAV 文件
 128=KeyDB 文件
 129=数据库文件
-130=在此处选择或拖放 WAV 文件
-131=在此处选择或拖放 KeyDB.cfg 文件
+130=请点击右侧按钮选择，或拖拽 WAV 文件到这里
+131=请点击右侧按钮选择，或拖拽 KeyDB.cfg 文件到这里
 132=%u%% 已完成
 133=从光驱 %C 读取时出错！\n扇区： %u-%u
 134=读取 %s 时出错！\n扇区： %u-%u
 135=已确认中止请求
 136=正在复制...
-137=Pro 版本
+137=专业版功能
