--- a/Xreveal_FRA.ini
+++ b/Xreveal_FRA.ini
@@ -81,7 +81,7 @@ Author=Andex
 4=Emplacement du fichier 'KeyDB.cfg'
 5=Emplacement des correctifs BD+/FUT (Fix Up Table)
 6=&Rechercher la clé en ligne (Connexion Internet requise)
-7=Note: La version Pro peut supprimer automatiquement BD+ en utilisant <a>bd+.dll</a>.
+7=Note: la version Pro peut supprimer la protection BD+ en utilisant le fichier <a>bd+.dll</a>.
 
 [DIALOG_13]
 0=Lecteurs
@@ -325,9 +325,9 @@ Author=Andex
 110=Stop!
 111=Fabricant
 112=Le dossier '%s' n'existe pas!\nVoulez-vous le créer?
-113=Quand fini: 
+113=Quand fini:
 114=Ne rien faire
-115=, 
+115=,
 116=Ejecter le disque
 117=Lire un son
 118=Quitter Xreveal
@@ -349,4 +349,4 @@ Author=Andex
 134=Erreur de lecture %s!\nSecteurs: %u-%u
 135=Demande d'abandon reconnue!
 136=Copie en cours...
-137=Fonctionnalité Pro
+137=(Version Pro)
