Update German translation

--- a/Xreveal_DEU.ini
+++ b/Xreveal_DEU.ini
@@ -1,7 +1,7 @@
 ﻿[INFO]
 ID=0x0407
 Name=German (Deutsch)
-Version=2.6.8.7
+Version=2.6.8.9
 Author=The Punisher
 1=OK
 2=Abbrechen
@@ -81,7 +81,7 @@ Author=The Punisher
 4=KeyDB.cfg Speicherort
 5=BD+ Fixup Tables (FUT) Speicherort
 6=Online nach einem Schlüssel &suchen
-7=The Pro version supports removing bd+ protection with <a>bd+.dll</a>.
+7=Die Pro-Version unterstützt Entfernung von BD+ mit <a>bd+.dll</a>.
 
 [DIALOG_13]
 0=Laufwerke
@@ -343,10 +343,10 @@ Author=The Punisher
 128=KeyDB Dateien
 129=Database Dateien
 130=Wählen oder kopieren Sie eine WAV hier
-131=Wählen oder kopieren Sie eine KeyDB.cfg hier
+131=Wählen oder kopieren Sie eine keyDB.cfg hier
 132=%u%% komplett
 133=Lesefehler in Laufwerk %C:!\nSektoren: %u-%u
 134=Lesefehler %s!\nSektoren: %u-%u
 135=Abbruchanfrage bestätigt
 136=Kopieren...
-137=Pro feature
+137=Pro Ausstattungsmerkmal
