Updated Import dialog box strings

--- a/Xreveal_CHS.ini
+++ b/Xreveal_CHS.ini
@@ -166,9 +166,7 @@ Author=Tanuki
 
 [DIALOG_25]
 0=导入...
-3=源 keydb.db:
-4=在此处选择或拖放源 keydb.db
-5=目标 keydb.db:
+3=请指定或拖动源 keydb.db 以导入到 <a>%s</a> 中。
 
 [DIALOG_26]
 0=视频哈希值校验
