--- a/Xreveal_DEU.ini
+++ b/Xreveal_DEU.ini
@@ -166,9 +166,7 @@ Author=The Punisher
 
 [DIALOG_25]
 0=Importieren...
-3=Quell-Keydb.db:
-4=Wählen sie die Quell-Keydb.db aus oder kopieren sie Eine hierhin.
-5=Ziel-Keydb.db：
+3=Please specify or drag the source keydb.db to import into <a>%s</a>.
 
 [DIALOG_26]
 0=Content Hash Kontrolle
