--- a/Xreveal_FRA.ini
+++ b/Xreveal_FRA.ini
@@ -166,9 +166,7 @@ Author=Andex
 
 [DIALOG_25]
 0=Importer un catalogue...
-3=Source de 'keydb.db':
-4=Sélectionnez ou déposer le fichier 'keydb.db' ici
-5=Destination de 'keydb.db':
+3=Please specify or drag the source keydb.db to import into <a>%s</a>.
 
 [DIALOG_26]
 0=Vérification
