--- a/Xreveal_JPN.ini
+++ b/Xreveal_JPN.ini
@@ -166,9 +166,7 @@ Author=Re*Index.(ot_inc)
 
 [DIALOG_25]
 0=Import...
-3=Source keydb.db:
-4=Select or drop source keydb.db here
-5=Destination keydb.db:
+3=Please specify or drag the source keydb.db to import into <a>%s</a>.
 
 [DIALOG_26]
 0=Content Hash Verifier
