--- a/Xreveal_KOR.ini
+++ b/Xreveal_KOR.ini
@@ -166,9 +166,7 @@ Author=VenusGirl (비너스걸)
 
 [DIALOG_25]
 0=가져오기...
-3=원본 keydb.db:
-4=여기서 원본 keydb.db 선택 또는 놓기
-5=대상 keydb.db：
+3=Please specify or drag the source keydb.db to import into <a>%s</a>.
 
 [DIALOG_26]
 0=콘텐츠 해시 확인자
