--- a/Xreveal_RUS.ini
+++ b/Xreveal_RUS.ini
@@ -166,9 +166,7 @@ Author=jekovcar
 
 [DIALOG_25]
 0=Импорт...
-3=Источник keydb.db:
-4=Выберите или опустите источник keydb.db здесь
-5=Место назначения keydb.db：
+3=Please specify or drag the source keydb.db to import into <a>%s</a>.
 
 [DIALOG_26]
 0=Проверка хэша содержимого
