--- a/Xreveal_BUL.ini
+++ b/Xreveal_BUL.ini
@@ -166,9 +166,7 @@ Author=jekovcar
 
 [DIALOG_25]
 0=Импорт...
-3=Източник keydb.db:
-4=Избор или пускане на източник keydb.db тук
-5=Местоназначение keydb.db：
+3=Please specify or drag the source keydb.db to import into <a>%s</a>.
 
 [DIALOG_26]
 0=Съдържание Хеш Верификатор
