--- a/Xreveal_FRA.ini
+++ b/Xreveal_FRA.ini
@@ -166,7 +166,7 @@ Author=Andex
 
 [DIALOG_25]
 0=Importer un catalogue...
-3=Please specify or drag the source keydb.db to import into <a>%s</a>.
+3=Sélectionner ou déposer ici un fichier 'keydb.db' à importer dans <a>%s</a>
 
 [DIALOG_26]
 0=Vérification
