--- a/Xreveal_BUL.ini
+++ b/Xreveal_BUL.ini
@@ -1,7 +1,7 @@
 [INFO]
 ID=0x0402
 Name=Bulgarian(Български)
-Version=2.6.7
+Version=2.6.9
 Author=jekovcar
 1=ОК
 2=Отказ
@@ -40,10 +40,10 @@ Author=jekovcar
 4=&Стартирай Xreveal с Windows
 5=Показвай прозореца винаги &отгоре
 6=&Списък дискове в менюто на системната област
-7=&Автоматична проверка за актуализации
+7=&Автопроверка за актуализации
 8=<a>Провери сега</a>
-9=Автоматично & съобщавай за отворени сривове, за подобряване на Xreveal
-10=&Prevent the system from sleeping while ripping
+9=Автоматично & съобщавай отворени сривове, за подобряване на Xreveal
+10=&Предотврати заспиване на системата по време на копиране
 
 [DIALOG_9]
 0=CD
@@ -51,18 +51,18 @@ Author=jekovcar
 
 [DIALOG_10]
 0=DVD
-3=&Enable DVD support
+3=&Активирай DVD поддръжка
 4=Премахни RC (Регионален код)
 5=Премахни RCE (Подобрен регионален код)
 6=Регионален код на диска:
 7=Премахни APS (Система аналогова защита)
 8=Премахни UOP (Забрани потребителски операции)
 9=Премахни ARccOS
-11=Xreveal needs <a>libdvdcss-2.dll</a> to open DVDs.
+11=Xreveal се нуждае от <a>libdvdcss-2.dll</a>, за отваряне на DVD дискове.
 
 [DIALOG_11]
 0=Blu-ray
-3=&Enable Blu-ray support
+3=&Активирай поддръжката на Blu-ray
 4=Премахни BD+
 5=Премахни RC (регионален код)
 6=Регионален код на диска:
@@ -73,7 +73,7 @@ Author=jekovcar
 11=Симулирай подключен 3D дисплей
 12=Преименуване на папки
 13=Използвай &AES хардуерно ускорение
-14=<a>Benchmark</a>
+14=<a>Бенчмарк</a>
 
 [DIALOG_12]
 0=KeyDB
@@ -81,7 +81,7 @@ Author=jekovcar
 4=KeyDB.cfg местоположение
 5=FUT местоположение
 6=&Търси ключ онлайн
-7=The Pro version supports removing bd+ protection with <a>bd+.dll</a>.
+7=Pro версията поддържа премахване на bd+ защита с <a>bd+.dll</a>.
 
 [DIALOG_13]
 0=Моите Приводи
@@ -90,29 +90,29 @@ Author=jekovcar
 8=Активирай &LibreDrive за UHD
 
 [DIALOG_14]
-1=Start
-3=Source
-4=Destination
-5=Options
-6=Info
-7=Type:
-8=Capacity:
-9=Protection:
-10=Free space:
-11=Capacity:
-12=&Keep protection
-13=&Verify content hash
-14=Create &md5 checksum file
-15=Create &dvdid.xml
+1=Старт
+3=Източник
+4=Дестинация
+5=Опции
+6=Информация
+7=Тип:
+8=Капацитет:
+9=Защита:
+10=Свободно място:
+11=Капацитет:
+12=&Запази защитата
+13=&Провери хеша на съдържанието
+14=Създай &md5 файл с контролна сума
+15=Създай &dvdid.xml
 
 [DIALOG_15]
 0=Xreveal
-3=Source:
-4=Destination:
-6=Time elapsed:
-7=Time remaining:
-8=Read errors:
-9=Read rate:
+3=Източник:
+4=Дестинация:
+6=Изминало време:
+7=Оставащо време:
+8=Грешки при четене:
+9=Скорост на четене:
 
 [DIALOG_16]
 0=Регион за плейър
@@ -130,16 +130,16 @@ Author=jekovcar
 
 [DIALOG_19]
 0=Бързи клавиши
-3=You can create system-wide hotkeys to trigger some actions while Xreveal is running.
-4=Show Xreveal system tray menu:
-5=Show settings window:
-6=Enable/Disable Xreveal:
-7=Rip to ISO file:
-8=Rip to folder:
+3=Бързи системни клавиши за действия, докато Xreveal работи.
+4=Покажи меню в трея на Xreveal:
+5=Покажи прозореца с настройки:
+6=Активирай/Деактивирай Xreveal:
+7=Извличане в ISO файл:
+8=Извличане в папка:
 
 [DIALOG_20]
 0=HD DVD
-3=&Enable HD DVD support
+3=&Активирай HD DVD поддръжка
 4=Премахни първо възпроизв. заглавие
 5=Премахни UOPs (забрани потребителски операции)
 6=Премахни родителски ограничения
@@ -159,31 +159,31 @@ Author=jekovcar
 
 [DIALOG_24]
 0=Информация За Устройство
-3=Drive:
-4=Serial number:
-5=Vendor specific:
-6=Bus encryption capable:
+3=Привод:
+4=Сериен номер:
+5=специфично за доставчика:
+6=Включи криптиране на шина:
 
 [DIALOG_25]
 0=Импорт...
-3=Please specify or drag the source keydb.db to import into <a>%s</a>.
+3=Моля, посочете или плъзнете изходния keydb.db за импорт в <a>%s</a>.
 
 [DIALOG_26]
 0=Съдържание Хеш Верификатор
 
 [DIALOG_27]
-0=Sounds
-3=Play sound after opening disc
-4=Play sound after ripping disc
-5=Success sound:
-6=Error sound:
+0=Звуци
+3=Възпроизвеждане на звук след отваряне на диска
+4=Възпроизвеждане на звук след извличане на диск
+5=Звук за успех:
+6=Звук за грешка:
 
 [DIALOG_28]
-0=Create Dump File
-3=Please wait...
-4=Adding %s...
-5=<a>How to submit dump files?</a>
-6=The file has been successfully created.
+0=Създай дъмп файл
+3=Моля, изчакайте...
+4=Добавяне на %s...
+5=<a>Как да изпратя дъмп файлове?</a>
+6=Файлът е създаден успешно.
 
 [DIALOG_A]
 0=Актуализация софтуер
@@ -231,11 +231,11 @@ Author=jekovcar
 18=Xreveal няма да работи, ако %s работи.\n\nИскате ли да се затвори?
 19=Xreveal сканира устройство %C:
 20=Дискът, който поставихте, ще бъде наличен скоро, моля изчакайте!
-21=Xreveal is not active for drive %C:!\n\nIn order to rip a copy-protected disc, Xreveal must be active for the drive.
-22=Directory '%s' has not enough space!\nYou need an additional %s.
+21=Xreveal не е активен за устройство %C:!\n\nЗа да извлече диск, защитен от копиране, Xreveal трябва да е активен за устройството.
+22=Директорията '%s' няма достатъчно място!\nНуждаете се от допълнителен %s.
 23=Копиране на %s...
 24=%.1f MB/s
-25=Operation successfully completed!
+25=Операцията приключи успешно!
 26=Няма намерен ключ за дешифриране в {%s}
 27=Не е намерен BD+ FUT
 28=Xreveal неуспешно отваряне на диска, код на грешка: %s.
@@ -251,8 +251,8 @@ Author=jekovcar
 38=%C:
 39=%C:\[%S]
 40=&Състояние
-41=&Open in Explorer
-42=&Create Dump File
+41=&Отвори в Explorer
+42=&Създай дъмп файл
 43=&Извади BD+ FUT
 44=Извличане на &твърд диск...
 45=Извличане в &имидж...
@@ -270,7 +270,7 @@ Author=jekovcar
 57=Използвате безплатната версия, <a>надстройте до Pro</a>, за да отключите допълнителни функции.
 58=%s вече съществува.\nИскате ли да го замените?
 59=Сигурни ли сте, че искате да отмените?
-60=Your license expired on %s.
+60=Вашият лиценз е изтекъл на %s.
 61=Плейър
 62=Регион
 63=Остават промени
@@ -322,29 +322,29 @@ Author=jekovcar
 109=Версия на командния ред (Windows/macOS/Linux)
 110=Отказ
 111=Спецификация доставчик
-112=Directory %s doesn't exist. Do you want to create it?
-113=When done: 
-114=Do nothing
+112=Директория %s не съществува. Ще я създадете?
+113=Когато е готово: 
+114=Не прави нищо
 115=, 
-116=Eject disc
-117=Play sound
-118=Quit Xreveal
-119=No action
-120=Shutdown
-121=Sleep
-122=Hibernate
-123=Lock system
-124=Log off
-125=All Files
-126=ISO Files
-127=WAV Files
-128=KeyDB Files
-129=Database Files
-130=Select or drop the WAV file here
-131=Select or drop the KeyDB.cfg here
-132=%u%% complete
-133=Error reading from drive %C:!\nSectors: %u-%u
-134=Error reading %s!\nSectors: %u-%u
-135=Abort request acknowledged
-136=Copying...
-137=Pro feature
+116=Извади диска
+117=Възпроизведи звук
+118=Изход от Xreveal
+119=Няма действие
+120=Изключи
+121=Сън
+122=Хибернация
+123=Системно Заключване
+124=Изход
+125=Всички файлове
+126=ISO файлове
+127=WAV файлове
+128=KeyDB файлове
+129=Файлове с база данни
+130=Изберете или пуснете WAV файла тук
+131=Изберете или пуснете KeyDB.cfg тук
+132=%u%% завършено
+133=Грешка при четене от устройство %C:!\nСектори: %u-%u
+134=Грешка при четене на %s!\nСектори: %u-%u
+135=Заявката за прекъсване е потвърдена
+136=Копиране...
+137=Про функция
