--- a/Xreveal_RUS.ini
+++ b/Xreveal_RUS.ini
@@ -1,7 +1,7 @@
 [INFO]
 ID=0x0419
 Name=Russian (Русский)
-Version=2.6.7
+Version=2.6.9
 Author=jekovcar
 1=ОК
 2=Отмена
@@ -40,10 +40,10 @@ Author=jekovcar
 4=&Запускать Xreveal с Windows
 5=Показывать окно всегда &поверх других
 6=&Показать диски в меню на панели задач
-7=&Автоматически проверять наличие обновлений
+7=&Автоматическая проверка обновлений
 8=<a>Проверить сейчас</a>
 9=Автоматически &сообщать об открытых сбоях для улучшения Xreveal
-10=&Prevent the system from sleeping while ripping
+10=&Запретить системе переходить в спящий режим во время копирования
 
 [DIALOG_9]
 0=CD
@@ -51,18 +51,18 @@ Author=jekovcar
 
 [DIALOG_10]
 0=DVD
-3=&Enable DVD support
+3=&Включить поддержку DVD
 4=Удалить &RC (код региона)
 5=Удаление RC&E (улучшение кода региона)
 6=&Код региона диска:
 7=Удалить &APS (аналоговую систему защиты)
 8=Удалить &UOPs (запреты на действия пользователя)
 9=Удалить &ARccOS
-11=Xreveal needs <a>libdvdcss-2.dll</a> to open DVDs.
+11=Xreveal требуется <a>libdvdcss-2.dll</a> для открытия DVD-дисков.
 
 [DIALOG_11]
 0=Blu-ray
-3=&Enable Blu-ray support
+3=&Включить поддержку Blu-ray
 4=Удалить &BD+
 5=Удалить &RC (код региона)
 6=&Код региона диска:
@@ -81,7 +81,7 @@ Author=jekovcar
 4=Местоположение KeyDB.cfg
 5=Локация FUT
 6=&Найти ключ онлайн
-7=The Pro version supports removing bd+ protection with <a>bd+.dll</a>.
+7=Версия Pro поддерживает удаление защиты bd+ с помощью <a>bd+.dll</a>.
 
 [DIALOG_13]
 0=Мои диски
@@ -90,29 +90,29 @@ Author=jekovcar
 8=Включить &LibreDrive для UHD
 
 [DIALOG_14]
-1=Start
-3=Source
-4=Destination
-5=Options
-6=Info
-7=Type:
-8=Capacity:
-9=Protection:
-10=Free space:
-11=Capacity:
-12=&Keep protection
-13=&Verify content hash
-14=Create &md5 checksum file
-15=Create &dvdid.xml
+1=Начать
+3=Источник
+4=Назначение
+5=Параметры
+6=Информация
+7=Тип:
+8=Емкость:
+9=Защита:
+10=Свободное место:
+11=Емкость:
+12=&Сохранять защиту
+13=&Проверить хеш контента
+14=Создать файл контрольной суммы &md5
+15=Создать &dvdid.xml
 
 [DIALOG_15]
 0=Xreveal
-3=Source:
-4=Destination:
-6=Time elapsed:
-7=Time remaining:
-8=Read errors:
-9=Read rate:
+3=Источник:
+4=Назначение:
+6=Прошло время:
+7=Оставшееся время:
+8=Ошибки чтения:
+9=Скорость чтения:
 
 [DIALOG_16]
 0=Регион плеера
@@ -130,16 +130,16 @@ Author=jekovcar
 
 [DIALOG_19]
 0=Горячие клавиши
-3=You can create system-wide hotkeys to trigger some actions while Xreveal is running.
-4=Show Xreveal system tray menu:
-5=Show settings window:
-6=Enable/Disable Xreveal:
-7=Rip to ISO file:
-8=Rip to folder:
+3=Системные горячие клавиши для запуска действий во время работы Xreveal.
+4=Показать меню Xreveal в трее:
+5=Показать окно настроек:
+6=Включить/Отключить Xreveal:
+7=Копировать в файл ISO:
+8=Копировать в папку:
 
 [DIALOG_20]
 0=HD DVD
-3=&Enable HD DVD support
+3=&Включить поддержку HD DVD
 4=Удалить &оглавление
 5=Удалить &UOPs (запреты на действия пользователя)
 6=Удалить &родительские ограничения
@@ -159,31 +159,31 @@ Author=jekovcar
 
 [DIALOG_24]
 0=Информация о приводе
-3=Drive:
-4=Serial number:
-5=Vendor specific:
-6=Bus encryption capable:
+3=Привод:
+4=Серийный номер:
+5=Зависит от поставщика:
+6=Шифрование шины возможно:
 
 [DIALOG_25]
 0=Импорт...
-3=Please specify or drag the source keydb.db to import into <a>%s</a>.
+3=Укажите или перетащите исходный файл keydb.db для импорта в <a>%s</a>.
 
 [DIALOG_26]
 0=Проверка хэша содержимого
 
 [DIALOG_27]
-0=Sounds
-3=Play sound after opening disc
-4=Play sound after ripping disc
-5=Success sound:
-6=Error sound:
+0=Звуки
+3=Воспроизводить звук после открытия диска
+4=Воспроизводить звук после копирования диска
+5=Звук успеха:
+6=Звук ошибки:
 
 [DIALOG_28]
-0=Create Dump File
-3=Please wait...
-4=Adding %s...
-5=<a>How to submit dump files?</a>
-6=The file has been successfully created.
+0=Создать файл дампа
+3=Пожалуйста, подождите...
+4=Добавление %s...
+5=<a>Как отправить файлы дампа?</a>
+6=Файл успешно создан.
 
 [DIALOG_A]
 0=Обновление программы
@@ -231,11 +231,11 @@ Author=jekovcar
 18=Xreveal не будет работать, если %s запущен.\n\nВы хотите закрыть его?
 19=Xreveal сканирует диск %C:
 20=Вставленный вами диск скоро будет доступен, подождите.!
-21=Xreveal is not active for drive %C:!\n\nIn order to rip a copy-protected disc, Xreveal must be active for the drive.
-22=Directory '%s' has not enough space!\nYou need an additional %s.
+21=Xreveal не активен для диска %C:!\n\nЧтобы скопировать защищенный от копирования диск, Xreveal должен быть активен для этого диска.
+22=В каталоге '%s' недостаточно места!\nВам нужен дополнительный %s.
 23=Копирование %s...
 24=%.1f МБ/с
-25=Operation successfully completed!
+25=Операция завершена успешно!
 26=В {%s} не найден ключ дешифрования
 27=BD+ FUT не найден
 28=Xreveal не удалось открыть диск, код ошибки: %s.
@@ -251,8 +251,8 @@ Author=jekovcar
 38=%С:
 39=%C:\[%S]
 40=&Состояние
-41=&Open in Explorer
-42=&Create Dump File
+41=&Открыть в проводнике
+42=&Создать файл дампа
 43=&Сбросить BD+ FUT
 44=Копировать в &папку...
 45=Копировать в файл &ISO...
@@ -270,7 +270,7 @@ Author=jekovcar
 57=Вы используете бесплатную версию. <a>Обновите ее до Pro</a> , чтобы разблокировать дополнительные функции.
 58=%s уже существует.\nХотите заменить его?
 59=Действительно хотите отменить?
-60=Your license expired on %s.
+60=Срок действия вашей лицензии истек %s.
 61=Плеер
 62=Регион
 63=Оставшиеся изменения
@@ -322,29 +322,29 @@ Author=jekovcar
 109=Версия командной строки (Windows/macOS/Linux)
 110=Прервать
 111=Спецификация поставщика
-112=Directory %s doesn't exist. Do you want to create it?
-113=When done: 
-114=Do nothing
+112=Каталог %s не существует. Хотите создать его?
+113=По окончаний: 
+114=Ничего не делать
 115=, 
-116=Eject disc
-117=Play sound
-118=Quit Xreveal
-119=No action
-120=Shutdown
-121=Sleep
-122=Hibernate
-123=Lock system
-124=Log off
-125=All Files
-126=ISO Files
-127=WAV Files
-128=KeyDB Files
-129=Database Files
-130=Select or drop the WAV file here
-131=Select or drop the KeyDB.cfg here
-132=%u%% complete
-133=Error reading from drive %C:!\nSectors: %u-%u
-134=Error reading %s!\nSectors: %u-%u
-135=Abort request acknowledged
-136=Copying...
-137=Pro feature
+116=Извлечь диск
+117=Воспроизвести звук
+118=Выйти из Xreveal
+119=Нет действий
+120=Выключение
+121=Сон
+122=Гибернация
+123=Блокировка Системы
+124=Выход из системы
+125=Все файлы
+126=ISO-файлы
+127=WAV-файлы
+128=Файлы базы данных ключей
+129=Файлы базы данных
+130=Выберите или перетащите сюда WAV-файл.
+131=Выберите или перетащите сюда KeyDB.cfg.
+132=%u%% завершено
+133=Ошибка чтения с диска %C:!\nСекторы: %u-%u
+134=Ошибка чтения %s!\nСекторы: %u-%u
+135=Запрос на отмену подтвержден.
+136=Копирование...
+137=Профессиональная функция
