Updated German translation

--- a/Xreveal_DEU.ini
+++ b/Xreveal_DEU.ini
@@ -1,7 +1,7 @@
 ﻿[INFO]
 ID=0x0407
 Name=German (Deutsch)
-Version=2.6.8.9
+Version=2.6.9
 Author=The Punisher
 1=OK
 2=Abbrechen
@@ -166,7 +166,7 @@ Author=The Punisher
 
 [DIALOG_25]
 0=Importieren...
-3=Please specify or drag the source keydb.db to import into <a>%s</a>.
+3=Bitte bestimmen Sie die keydb.db oder ziehen Sie sie hierhin für den Import nach <a>%s</a>.
 
 [DIALOG_26]
 0=Content Hash Kontrolle
@@ -314,7 +314,7 @@ Author=The Punisher
 101=ISO überprüfen
 102=Ordner überprüfen
 103=Laufwerk überprüfen
-104=Unterstützt Bus-Verschlüsserung
+104=Unterstützt Bus-Verschlüsselung
 105=%s (Laufwerk: %s)
 106=Öffne Log Ordner
 107=Einstellungen
