--- a/Xreveal_KOR.ini
+++ b/Xreveal_KOR.ini
@@ -1,7 +1,7 @@
 ﻿[INFO]
 ID=0x0412
 Name=Korean (한국어)
-Version=2.6.7
+Version=2.6.9
 Author=VenusGirl (비너스걸)
 1=확인
 2=취소
@@ -43,7 +43,7 @@ Author=VenusGirl (비너스걸)
 7=자동으로 업데이트 확인(&C)
 8=<a>지금 확인</a>
 9=열기 실패를 자동으로 보고하여 Xreveal 개선
-10=&Prevent the system from sleeping while ripping
+10=리핑 중 시스템 절전 모드 방지(&P)
 
 [DIALOG_9]
 0=CD
@@ -58,11 +58,11 @@ Author=VenusGirl (비너스걸)
 7=아날로그 보호 시스템 제거
 8=금지된 사용자 작업 제거
 9=ARccOS 제거
-11=Xreveal needs <a>libdvdcss-2.dll</a> to open DVDs.
+11=Xreveal에서 DVD를 열려면 <a>libdvdcss-2.dll</a>이 필요합니다.
 
 [DIALOG_11]
 0=Blu-ray
-3=&Enable Blu-ray support
+3=Blu-ray 지원 사용(&E)
 4=BD+ 보호 제거
 5=Blu-ray 지역 코드 제거
 6=디스크 지역:
@@ -81,7 +81,7 @@ Author=VenusGirl (비너스걸)
 4=KeyDB.cfg 위치
 5=BD+ 테이블 고정 (FUT) 위치
 6=온라인에서 키 찾기(&F)
-7=The Pro version supports removing bd+ protection with <a>bd+.dll</a>.
+7=프로 버전은 <a>bd+.dll</a>로 bd+ 보호 기능을 제거할 수 있습니다.
 
 [DIALOG_13]
 0=내 드라이버
@@ -90,29 +90,29 @@ Author=VenusGirl (비너스걸)
 8=UHD용 LibreDrive 사용(&L)
 
 [DIALOG_14]
-1=Start
-3=Source
-4=Destination
-5=Options
-6=Info
-7=Type:
-8=Capacity:
-9=Protection:
-10=Free space:
-11=Capacity:
-12=&Keep protection
-13=&Verify content hash
-14=Create &md5 checksum file
-15=Create &dvdid.xml
+1=시작
+3=원본
+4=대상
+5=옵션
+6=정보
+7=유형:
+8=용량:
+9=보호:
+10=남은 공간:
+11=용량:
+12=보호 유지(&K)
+13=콘텐츠 해시 검증(&V)
+14=MD5 체크섬 파일 생성(&M)
+15=dvdid.xml 만들기(&D)
 
 [DIALOG_15]
 0=Xreveal
-3=Source:
-4=Destination:
-6=Time elapsed:
-7=Time remaining:
-8=Read errors:
-9=Read rate:
+3=원본:
+4=대상:
+6=경과 시간:
+7=남은 시간:
+8=읽기 오류:
+9=읽기 속도:
 
 [DIALOG_16]
 0=재생 지역
@@ -130,16 +130,16 @@ Author=VenusGirl (비너스걸)
 
 [DIALOG_19]
 0=단축키
-3=You can create system-wide hotkeys to trigger some actions while Xreveal is running.
-4=Show Xreveal system tray menu:
-5=Show settings window:
-6=Enable/Disable Xreveal:
-7=Rip to ISO file:
-8=Rip to folder:
+3=시스템 전체 단축키를 생성하여 Xreveal이 실행되는 동안 일부 작업을 트리거할 수 있습니다.
+4=Xreveal 시스템 트레이 메뉴 표시:
+5=설정 창 표시:
+6=Xreveal 사용/사용 안 함:
+7=ISO 파일로 리핑:
+8=폴더로 리핑:
 
 [DIALOG_20]
 0=HD DVD
-3=&Enable HD DVD support
+3=HD DVD 지원 활성화(&E)
 4=첫 번째 재생 제목 제거
 5=UOP 제거 (사용자 조작 금지)
 6=부모 제한 제거
@@ -159,31 +159,31 @@ Author=VenusGirl (비너스걸)
 
 [DIALOG_24]
 0=드라이브 정보
-3=Drive:
-4=Serial number:
-5=Vendor specific:
-6=Bus encryption capable:
+3=드라이브:
+4=일련 번호:
+5=공급업체별:
+6=버스 암호화 가능:
 
 [DIALOG_25]
 0=가져오기...
-3=Please specify or drag the source keydb.db to import into <a>%s</a>.
+3=<a>%s</a>로 가져올 소스 keydb.db를 지정하거나 드래그하세요.
 
 [DIALOG_26]
 0=콘텐츠 해시 확인자
 
 [DIALOG_27]
-0=Sounds
-3=Play sound after opening disc
-4=Play sound after ripping disc
-5=Success sound:
-6=Error sound:
+0=사운드
+3=디스크를 연 후 사운드 재생
+4=디스크 리핑 후 사운드 재생
+5=성공 사운드:
+6=오류 사운드:
 
 [DIALOG_28]
-0=Create Dump File
-3=Please wait...
-4=Adding %s...
-5=<a>How to submit dump files?</a>
-6=The file has been successfully created.
+0=덤프 파일 만들기
+3=잠시만 기다려 주세요...
+4=%s 추가 중...
+5=<a>덤프 파일은 어떻게 제출하나요?</a>
+6=파일이 성공적으로 생성되었습니다.
 
 [DIALOG_A]
 0=소프트웨어 업데이트
@@ -251,8 +251,8 @@ Author=VenusGirl (비너스걸)
 38=%C:
 39=%C:\[%S]
 40=상태(&S)
-41=&Open in Explorer
-42=&Create Dump File
+41=탐색기에서 열기(&O)
+42=덤프 파일 만들기(&C)
 43=BD+ 수정 테이블 표시(&S)
 44=하드 디스크에 복사(&H)...
 45=이미지로 복사(&I)...
@@ -270,7 +270,7 @@ Author=VenusGirl (비너스걸)
 57=이 프로그램은 프리웨어입니다.\n\n이 프로그램이 유용하다면 <a>기부</a>를 통해 개선할 수 있습니다.
 58=[%s] 파일이 이미 존재합니다. 기존 파일을 대체하시겠습니까?
 59=취소하시겠습니까?
-60=Your license expired on %s.
+60=라이선스가 %s에 만료되었습니다.
 61=재생
 62=지역 코드
 63=남은 변경 사항
@@ -322,29 +322,29 @@ Author=VenusGirl (비너스걸)
 109=명령줄 버전 (Windows/macOS/Linux)
 110=정보
 111=공급업체별
-112=Directory %s doesn't exist. Do you want to create it?
-113=When done: 
-114=Do nothing
+112=디렉터리 %s가 존재하지 않습니다. 생성하시겠습니까?
+113=완료 시: 
+114=아무것도 하지 않음
 115=, 
-116=Eject disc
-117=Play sound
-118=Quit Xreveal
-119=No action
-120=Shutdown
-121=Sleep
-122=Hibernate
-123=Lock system
-124=Log off
-125=All Files
-126=ISO Files
-127=WAV Files
-128=KeyDB Files
-129=Database Files
-130=Select or drop the WAV file here
-131=Select or drop the KeyDB.cfg here
-132=%u%% complete
-133=Error reading from drive %C:!\nSectors: %u-%u
-134=Error reading %s!\nSectors: %u-%u
-135=Abort request acknowledged
-136=Copying...
-137=Pro feature
+116=디스크 꺼내기
+117=사운드 재생
+118=Xreveal 끝내기
+119=동작 없음
+120=시스템 종료
+121=절전 모드
+122=최대 절전 모드
+123=시스템 잠금
+124=로그 오프
+125=모든 파일
+126=ISO 파일
+127=WAV 파일
+128=KeyDB 파일
+129=데이터베이스 파일
+130=여기에서 WAV 파일을 선택하거나 끌어다 놓습니다
+131=여기에서 KeyDB.cfg를 선택하거나 끌어다 놓습니다
+132=%u%% 완료
+133=C: 드라이브에서 읽는 동안 오류가 발생했습니다!\n섹터: %u-%u
+134=%s를 읽는 동안 오류가 발생했습니다!\n섹터: %u-%u
+135=중단 요청 승인
+136=복사 중...
+137=Pro 기능
