--- a/Xreveal_BUL.ini
+++ b/Xreveal_BUL.ini
@@ -43,7 +43,6 @@ Author=jekovcar
 7=&Автопроверка за актуализации
 8=<a>Провери сега</a>
 9=Автоматично & съобщавай отворени сривове, за подобряване на Xreveal
-10=&Предотврати заспиване на системата по време на копиране
 
 [DIALOG_9]
 0=CD
@@ -104,6 +103,9 @@ Author=jekovcar
 13=&Провери хеша на съдържанието
 14=Създай &md5 файл с контролна сума
 15=Създай &dvdid.xml
+16=Create log file
+17=RTF
+18=TXT
 
 [DIALOG_15]
 0=Xreveal
@@ -348,3 +350,6 @@ Author=jekovcar
 135=Заявката за прекъсване е потвърдена
 136=Копиране...
 137=Про функция
+138=Update license
+139=You are going to create a protected image file. The file can only be read from a virtual drive, if Xreveal is installed and running!\n\nDo you want to continue?
+140=Delete incomplete file?\n\n%s
