--- a/Xreveal_CHS.ini
+++ b/Xreveal_CHS.ini
@@ -43,7 +43,6 @@ Author=Tanuki
 7=自动检查更新(&C)
 8=<a>现在检查</a>
 9=自动上报打开失败信息以改进 Xreveal(&R)
-10=防止系统在翻录碟片时休眠(&P)
 
 [DIALOG_9]
 0=音乐 CD
@@ -104,6 +103,9 @@ Author=Tanuki
 13=验证视频文件哈希值(&V)
 14=创建 &md5 校验文件
 15=创建 &dvdid.xml
+16=Create log file
+17=RTF
+18=TXT
 
 [DIALOG_15]
 0=Xreveal
@@ -348,3 +350,6 @@ Author=Tanuki
 135=已确认中止请求
 136=正在复制...
 137=专业版功能
+138=Update license
+139=You are going to create a protected image file. The file can only be read from a virtual drive, if Xreveal is installed and running!\n\nDo you want to continue?
+140=Delete incomplete file?\n\n%s
