--- a/Xreveal_ENU.ini
+++ b/Xreveal_ENU.ini
@@ -1,7 +1,7 @@
 [INFO]
 ID=0x0409
 Name=English
-Version=2.6.9
+Version=2.7.0
 Author=
 1=OK
 2=Cancel
@@ -43,7 +43,6 @@ Author=
 7=&Check for updates automatically
 8=<a>Check now</a>
 9=Automatically &report open failures to improve Xreveal
-10=&Prevent the system from sleeping while ripping
 
 [DIALOG_9]
 0=CD
@@ -81,7 +80,7 @@ Author=
 4=KeyDB.cfg location
 5=FUT location
 6=&Find key online
-7=The Pro version supports removing bd+ protection with <a>bd+.dll</a>.
+7=The Pro version supports removing BD+ protection with <a>bd+.dll</a>.
 
 [DIALOG_13]
 0=My Drives
@@ -104,6 +103,9 @@ Author=
 13=&Verify content hash
 14=Create &md5 checksum file
 15=Create &dvdid.xml
+16=Create log file
+17=RTF
+18=TXT
 
 [DIALOG_15]
 0=Xreveal
@@ -236,8 +238,8 @@ Author=
 23=Copying %s...
 24=%.1f MB/s
 25=Operation successfully completed!
-26=The disc key not found in {%s}
-27=The BD+ FUT not found
+26=The disc key not found! {%s}
+27=The BD+ FUT not found!
 28=Xreveal failed to open disc, error code: %s.
 29=Drive
 30=Vendor
@@ -348,3 +350,6 @@ Author=
 135=Abort request acknowledged
 136=Copying...
 137=Pro feature
+138=Update license
+139=You are going to create a protected image file. The file can only be read from a virtual drive, if Xreveal is installed and running!\n\nDo you want to continue?
+140=Delete incomplete file?\n\n%s
