--- a/Xreveal_FRA.ini
+++ b/Xreveal_FRA.ini
@@ -43,7 +43,6 @@ Author=Andex
 7=&Rechercher les mises à jour automatiquement
 8= <a>Rechercher maintenant!</a>
 9=&Signaler automatiquement les codes d'erreur de lecture pour améliorer Xreveal
-10=Désactiver la mise en &veille lors de la copie
 
 [DIALOG_9]
 0=CD
@@ -104,6 +103,9 @@ Author=Andex
 13=&Vérifier l'intégrité des données
 14=Créer un fichier de contrôle &MD5
 15=Créer le fichier &dvdid.xml
+16=Create log file
+17=RTF
+18=TXT
 
 [DIALOG_15]
 0=Xreveal
@@ -348,3 +350,6 @@ Author=Andex
 135=Demande d'abandon reconnue!
 136=Copie en cours...
 137=(Version Pro)
+138=Update license
+139=You are going to create a protected image file. The file can only be read from a virtual drive, if Xreveal is installed and running!\n\nDo you want to continue?
+140=Delete incomplete file?\n\n%s
