--- a/Xreveal_ITA.ini
+++ b/Xreveal_ITA.ini
@@ -43,7 +43,6 @@ Author=bovirus (bovirus@gmail.com)
 7=&Controlla automaticamente aggiornamenti
 8=<a>Controlla ora</a>
 9=Segnala automaticamente e&rrori per migliorare Xreveal
-10=&Prevent the system from sleeping while ripping
 
 [DIALOG_9]
 0=CD
@@ -104,6 +103,9 @@ Author=bovirus (bovirus@gmail.com)
 13=&Verify content hash
 14=Create &md5 checksum file
 15=Create &dvdid.xml
+16=Create log file
+17=RTF
+18=TXT
 
 [DIALOG_15]
 0=Xreveal
@@ -348,3 +350,6 @@ Author=bovirus (bovirus@gmail.com)
 135=Abort request acknowledged
 136=Copying...
 137=Pro feature
+138=Update license
+139=You are going to create a protected image file. The file can only be read from a virtual drive, if Xreveal is installed and running!\n\nDo you want to continue?
+140=Delete incomplete file?\n\n%s
