--- a/Xreveal_KOR.ini
+++ b/Xreveal_KOR.ini
@@ -43,7 +43,6 @@ Author=VenusGirl (비너스걸)
 7=자동으로 업데이트 확인(&C)
 8=<a>지금 확인</a>
 9=열기 실패를 자동으로 보고하여 Xreveal 개선
-10=리핑 중 시스템 절전 모드 방지(&P)
 
 [DIALOG_9]
 0=CD
@@ -104,6 +103,9 @@ Author=VenusGirl (비너스걸)
 13=콘텐츠 해시 검증(&V)
 14=MD5 체크섬 파일 생성(&M)
 15=dvdid.xml 만들기(&D)
+16=Create log file
+17=RTF
+18=TXT
 
 [DIALOG_15]
 0=Xreveal
@@ -348,3 +350,6 @@ Author=VenusGirl (비너스걸)
 135=중단 요청 승인
 136=복사 중...
 137=Pro 기능
+138=Update license
+139=You are going to create a protected image file. The file can only be read from a virtual drive, if Xreveal is installed and running!\n\nDo you want to continue?
+140=Delete incomplete file?\n\n%s
