--- a/Xreveal_RUS.ini
+++ b/Xreveal_RUS.ini
@@ -43,7 +43,6 @@ Author=jekovcar
 7=&Автоматическая проверка обновлений
 8=<a>Проверить сейчас</a>
 9=Автоматически &сообщать об открытых сбоях для улучшения Xreveal
-10=&Запретить системе переходить в спящий режим во время копирования
 
 [DIALOG_9]
 0=CD
@@ -104,6 +103,9 @@ Author=jekovcar
 13=&Проверить хеш контента
 14=Создать файл контрольной суммы &md5
 15=Создать &dvdid.xml
+16=Create log file
+17=RTF
+18=TXT
 
 [DIALOG_15]
 0=Xreveal
@@ -348,3 +350,6 @@ Author=jekovcar
 135=Запрос на отмену подтвержден.
 136=Копирование...
 137=Профессиональная функция
+138=Update license
+139=You are going to create a protected image file. The file can only be read from a virtual drive, if Xreveal is installed and running!\n\nDo you want to continue?
+140=Delete incomplete file?\n\n%s
