--- a/Xreveal_DEU.ini
+++ b/Xreveal_DEU.ini
@@ -43,7 +43,6 @@ Author=The Punisher
 7=Automatisch Online auf Updates überprüfen
 8=<a>Jetzt prüfen</a>
 9=Automatisch fehlgeschlagenes Öffnen einer Disc &melden um Xreveal zu verbessern
-10=&Verhindern das das System während des Rippens in den Ruhezustand geht
 
 [DIALOG_9]
 0=CD
@@ -104,6 +103,9 @@ Author=The Punisher
 13=&Überprüfung: Content Hash
 14=Erstelle &md5 checksum Datei
 15=Erstelle &dvdid.xml
+16=Create log file
+17=RTF
+18=TXT
 
 [DIALOG_15]
 0=Xreveal
@@ -348,3 +350,6 @@ Author=The Punisher
 135=Abbruchanfrage bestätigt
 136=Kopieren...
 137=Pro Ausstattungsmerkmal
+138=Update license
+139=You are going to create a protected image file. The file can only be read from a virtual drive, if Xreveal is installed and running!\n\nDo you want to continue?
+140=Delete incomplete file?\n\n%s
