--- a/Xreveal_SVE.ini
+++ b/Xreveal_SVE.ini
@@ -43,7 +43,6 @@ Author=Sopor
 7=Sök efter uppdateringar &automatiskt
 8=<a>Check now</a>
 9=Automatically &report open failures to improve Xreveal
-10=&Prevent the system from sleeping while ripping
 
 [DIALOG_9]
 0=CD
@@ -104,6 +103,9 @@ Author=Sopor
 13=&Verify content hash
 14=Create &md5 checksum file
 15=Create &dvdid.xml
+16=Create log file
+17=RTF
+18=TXT
 
 [DIALOG_15]
 0=Xreveal
@@ -348,3 +350,6 @@ Author=Sopor
 135=Abort request acknowledged
 136=Copying...
 137=Pro feature
+138=Update license
+139=You are going to create a protected image file. The file can only be read from a virtual drive, if Xreveal is installed and running!\n\nDo you want to continue?
+140=Delete incomplete file?\n\n%s
