--- a/Xreveal_DEU.ini
+++ b/Xreveal_DEU.ini
@@ -1,7 +1,7 @@
 ﻿[INFO]
 ID=0x0407
 Name=German (Deutsch)
-Version=2.6.9
+Version=2.6.9.6
 Author=The Punisher
 1=OK
 2=Abbrechen
@@ -103,7 +103,7 @@ Author=The Punisher
 13=&Überprüfung: Content Hash
 14=Erstelle &md5 checksum Datei
 15=Erstelle &dvdid.xml
-16=Create log file
+16=Erstelle Log Datei
 17=RTF
 18=TXT
 
@@ -164,7 +164,7 @@ Author=The Punisher
 3=Laufwerk:
 4=Seriennummer:
 5=Herstellerspezifisch:
-6=Bus-Verschlüsserungsfähig:
+6=Bus-Verschlüsselungsfähig:
 
 [DIALOG_25]
 0=Importieren...
@@ -350,6 +350,6 @@ Author=The Punisher
 135=Abbruchanfrage bestätigt
 136=Kopieren...
 137=Pro Ausstattungsmerkmal
-138=Update license
-139=You are going to create a protected image file. The file can only be read from a virtual drive, if Xreveal is installed and running!\n\nDo you want to continue?
-140=Delete incomplete file?\n\n%s
+138=Lizenz erweitern
+139=Dieser Schritt erzeugt eine geschützte Image-Datei. Diese Datei kann nur auf einem virtuellen Laufwerk gelesen werden, wenn Xreveal installiert und gestartet ist !\n\nFortfahren ?
+140=Unvollständige Datei löschen ?\n\n%s
