--- a/Xreveal_FRA.ini
+++ b/Xreveal_FRA.ini
@@ -1,7 +1,7 @@
 [INFO]
 ID=0x040C
 Name=French (Français)
-Version=2.6.9
+Version=2.7.0
 Author=Andex
 1=OK
 2=Annuler
@@ -103,7 +103,7 @@ Author=Andex
 13=&Vérifier l'intégrité des données
 14=Créer un fichier de contrôle &MD5
 15=Créer le fichier &dvdid.xml
-16=Create log file
+16=Créer un fichier journal
 17=RTF
 18=TXT
 
@@ -233,8 +233,8 @@ Author=Andex
 18=Xreveal ne fonctionnera pas si %s est en cours d'exécution.\n\nVoulez-vous fermer %s?
 19=Xreveal scanne le lecteur %C:
 20=Le disque sera disponible dans quelques instants, merci de patienter...
-21=Xreveal is not active for drive %C:!\n\nIn order to rip a copy-protected disc, Xreveal must be active for the drive.
-22=Directory '%s' has not enough space!\nYou need an additional %s.
+21=Xreveal n'est pas activé pour le lecteur %C:!\n\nPour copier un disque protégé contre la copie, Xreveal doit être activé pour ce lecteur.
+22=Le dossier '%s' n'a pas assez d'espace libre!\nVous avez besoin de %s en plus.
 23=Copie de '%s' en cours...
 24=%.1f Mo/s
 25=Processus terminé avec succès!
@@ -350,6 +350,6 @@ Author=Andex
 135=Demande d'abandon reconnue!
 136=Copie en cours...
 137=(Version Pro)
-138=Update license
-139=You are going to create a protected image file. The file can only be read from a virtual drive, if Xreveal is installed and running!\n\nDo you want to continue?
-140=Delete incomplete file?\n\n%s
+138=Mise à jour de licence
+139=Vous allez créer un fichier image protégé!\nIl pourra être lu par un lecteur virtuel seulement si Xreveal est démarré!\n\nContinuer?
+140=Supprimer le fichier incomplet?\n\n%s
